logs/jobmanager.log
2025-02-18 18:04:24,586 [ERROR] Exception on /job/details/4 [GET]
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/flask/app.py", line 2525, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/flask/app.py", line 1822, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/flask/app.py", line 1820, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/flask/app.py", line 1796, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/Jobmanager/app/db.py", line 31, in decorated_function
    return f(db, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/Jobmanager/app/routes/job_routes.py", line 342, in job_details
    return render_template('job_details.html',
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/flask/templating.py", line 146, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/jinja2/environment.py", line 1081, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/jinja2/environment.py", line 1010, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/jinja2/environment.py", line 969, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/usr/lib/python3/dist-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/Jobmanager/app/templates/job_details.html", line 58, in template
    {% do weekly_groups.setdefault(current_week, {'entries': [], 'total_hours': 0}) %}
    ^^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'do'. Jinja was looking for the following tags: 'elif' or 'else' or 'endif'. The innermost block that needs to be closed is 'if'.
2025-02-18 18:07:18,720 [INFO] Root path: /home/Jobmanager
2025-02-18 18:07:18,721 [INFO] Current working directory: /home/Jobmanager
2025-02-18 18:07:18,721 [INFO] Instance path: /home/Jobmanager/instance
2025-02-18 18:07:18,721 [INFO] Creating full backup at: /home/Jobmanager/backups/jobmanager_backup_20250218_1807.zip
2025-02-18 18:07:18,721 [INFO] Adding file: /home/Jobmanager/run.py
2025-02-18 18:07:18,721 [INFO] Adding file: /home/Jobmanager/init_db.py
2025-02-18 18:07:18,722 [INFO] Adding file: /home/Jobmanager/gitback.sh
2025-02-18 18:07:18,722 [INFO] Adding to zip: app/db.py
2025-02-18 18:07:18,723 [INFO] Adding to zip: app/__init__.py
2025-02-18 18:07:18,723 [INFO] Adding to zip: app/schema.sql
2025-02-18 18:07:18,723 [INFO] Adding to zip: app/routes/image_routes.py
2025-02-18 18:07:18,724 [INFO] Adding to zip: app/routes/__init__.py
2025-02-18 18:07:18,724 [INFO] Adding to zip: app/routes/customer_routes.py
2025-02-18 18:07:18,724 [INFO] Adding to zip: app/routes/job_routes.py
2025-02-18 18:07:18,725 [INFO] Adding to zip: app/routes/timer_routes.py
2025-02-18 18:07:18,726 [INFO] Adding to zip: app/utils/job_utils.py
2025-02-18 18:07:18,726 [INFO] Adding to zip: app/utils/material_utils.py
2025-02-18 18:07:18,726 [INFO] Adding to zip: app/utils/timer_utils.py
2025-02-18 18:07:18,726 [INFO] Adding to zip: app/utils/__init__.py
2025-02-18 18:07:18,727 [INFO] Adding to zip: app/utils/invoice_utils.py
2025-02-18 18:07:18,727 [INFO] Adding to zip: app/utils/error_utils.py
2025-02-18 18:07:18,727 [INFO] Adding to zip: app/utils/image_utils.py
2025-02-18 18:07:18,728 [INFO] Adding to zip: app/templates/customer_form.html
2025-02-18 18:07:18,728 [INFO] Adding to zip: app/templates/quick_timer.html
2025-02-18 18:07:18,728 [INFO] Adding to zip: app/templates/job_details.html
2025-02-18 18:07:18,729 [INFO] Adding to zip: app/templates/invoice.html
2025-02-18 18:07:18,729 [INFO] Adding to zip: app/templates/job_form.html
2025-02-18 18:07:18,730 [INFO] Adding to zip: app/templates/customer_list.html
2025-02-18 18:07:18,730 [INFO] Adding to zip: app/templates/500.html
2025-02-18 18:07:18,731 [INFO] Adding to zip: app/templates/base.html
2025-02-18 18:07:18,731 [INFO] Adding to zip: app/templates/job_list.html
2025-02-18 18:07:18,731 [INFO] Adding to zip: app/templates/404.html
2025-02-18 18:07:18,732 [INFO] Adding to zip: app/static/qr-quick_timer.svg
2025-02-18 18:07:18,732 [INFO] Adding to zip: app/static/css/styles.css
2025-02-18 18:07:18,733 [INFO] Full backup created at: /home/Jobmanager/backups/jobmanager_backup_20250218_1807.zip
2025-02-18 18:07:18,733 [INFO] Backup file exists: True
2025-02-18 18:27:57,461 [ERROR] Upload failed: name 'timedelta' is not defined
Traceback (most recent call last):
  File "/home/Jobmanager/app/routes/image_routes.py", line 32, in upload_direct
    filename = image_mgr.process_image(job_id, file, db)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/Jobmanager/app/utils/image_utils.py", line 33, in process_image
    timestamp = (datetime.now() + timedelta(hours=1)).strftime('%y%m%d%H%M')
                                  ^^^^^^^^^
NameError: name 'timedelta' is not defined
2025-02-18 18:29:11,712 [ERROR] Upload failed: name 'timedelta' is not defined
Traceback (most recent call last):
  File "/home/Jobmanager/app/routes/image_routes.py", line 32, in upload_direct
    filename = image_mgr.process_image(job_id, file, db)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/Jobmanager/app/utils/image_utils.py", line 33, in process_image
    timestamp = (datetime.now() + timedelta(hours=1)).strftime('%y%m%d%H%M')
                                  ^^^^^^^^^
NameError: name 'timedelta' is not defined
2025-02-18 19:40:59,406 [INFO] Stopping timer for job 4
2025-02-19 11:52:29,198 [INFO] Starting timer for job 28
2025-02-19 11:52:29,199 [INFO] Stopping all active timers
2025-02-19 12:14:41,326 [INFO] Starting timer for job 26
2025-02-19 12:14:41,326 [INFO] Stopping all active timers
2025-02-19 12:42:52,465 [INFO] Starting timer for job 31
2025-02-19 12:42:52,465 [INFO] Stopping all active timers
2025-02-19 13:00:04,910 [INFO] Stopping timer for job 31
2025-02-19 13:07:49,116 [INFO] Starting timer for job 12
2025-02-19 13:07:49,116 [INFO] Starting timer for job 12
2025-02-19 13:07:49,116 [INFO] Stopping all active timers
2025-02-19 13:07:49,116 [INFO] Stopping all active timers
2025-02-19 13:08:43,700 [INFO] Starting timer for job 31
2025-02-19 13:08:43,700 [INFO] Stopping all active timers
2025-02-19 13:53:50,045 [INFO] Stopping timer for job 31
2025-02-19 14:29:03,386 [INFO] Starting timer for job 28
2025-02-19 14:29:03,386 [INFO] Stopping all active timers
2025-02-19 14:38:27,753 [INFO] Starting timer for job 25
2025-02-19 14:38:27,753 [INFO] Stopping all active timers
2025-02-19 15:20:01,772 [INFO] Stopping timer for job 25
2025-02-19 17:43:05,625 [INFO] Starting timer for job 4
2025-02-19 17:43:05,625 [INFO] Stopping all active timers
